[tool.poetry]
name = "polymer"
version = "1.0.1"
description = "Manage parallel tasks"
authors = [
    "Mike Pennington <mike@pennington.net>",
]
license = "GPLv3"
readme = "README.rst"
homepage = "https://github.com/mpenning/polymer"
documentation = ""
keywords = ["Python", "Multiprocessing"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = ">=3.6"
loguru = "0.6.0"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel>=0.37.0",]
build-backend = "poetry.core.masonry.api"
